@@ -14,6 +14,7 @@ import com.faforever.client.fx.PlatformService;
 import com.faforever.client.fx.SimpleChangeListener;
 import com.faforever.client.fx.SimpleInvalidationListener;
 import com.faforever.client.fx.StringListCell;
+import com.faforever.client.game.GamePathHandler;
 import com.faforever.client.game.VaultPathHandler;
 import com.faforever.client.i18n.I18n;
 import com.faforever.client.main.event.NavigationItem;
@@ -42,7 +43,6 @@ import com.faforever.client.theme.Theme;
 import com.faforever.client.theme.ThemeService;
 import com.faforever.client.theme.UiService;
 import com.faforever.client.ui.list.NoSelectionModelListView;
-import com.faforever.client.ui.preferences.GameDirectoryRequiredHandler;
 import com.faforever.client.update.ClientUpdateService;
 import com.faforever.client.user.LoginService;
 import com.google.common.annotations.VisibleForTesting;
@@ -112,7 +112,7 @@ public class SettingsController extends NodeController<Node> {
   private final ObjectFactory<DeleteDirectoryTask> deleteDirectoryTaskFactory;
   private final ObjectFactory<DownloadFAFDebuggerTask> downloadFAFDebuggerTaskFactory;
   private final FxApplicationThreadExecutor fxApplicationThreadExecutor;
-  private final GameDirectoryRequiredHandler gameDirectoryRequiredHandler;
+  private final GamePathHandler gamePathHandler;
 
   public TextField executableDecoratorField;
   public TextField executionDirectoryField;
@@ -246,8 +246,9 @@ public class SettingsController extends NodeController<Node> {
     themeService.setTheme(newValue);
     if (themeService.doesThemeNeedRestart(newValue)) {
       notificationService.addNotification(new PersistentNotification(i18n.get("theme.needsRestart.message", newValue.getDisplayName()), Severity.WARN,
-          Collections.singletonList(new Action(i18n.get("theme.needsRestart.quit"), event -> Platform.exit()))));
-      // FIXME reload application (stage & application context) https://github.com/FAForever/downlords-faf-client/issues/1794
+                                                                     Collections.singletonList(
+                                                                         new Action(i18n.get("theme.needsRestart.quit"),
+                                                                                    Platform::exit))));
     }
   }
 
@@ -533,14 +534,10 @@ public class SettingsController extends NodeController<Node> {
 
     availableLanguagesListener.invalidated(i18n.getAvailableLanguages());
 
+    // FIXME reload application (stage & application context)
     notificationService.addNotification(new PersistentNotification(
         i18n.get(locale, "settings.languages.restart.message"),
-        Severity.WARN,
-        Collections.singletonList(new Action(i18n.get(locale, "settings.languages.restart"),
-            event -> {
-              Platform.exit();
-              // FIXME reload application (stage & application context)
-            })
+        Severity.WARN, List.of(new Action(i18n.get(locale, "settings.languages.restart"), Platform::exit)
         )));
   }
 
@@ -574,15 +571,16 @@ public class SettingsController extends NodeController<Node> {
   }
 
   public void onSelectGameLocation() {
-    gameDirectoryRequiredHandler.onChooseGameDirectory(null);
+    gamePathHandler.chooseAndValidateGameDirectory();
   }
 
   public void onSelectVaultLocation() {
-    platformService.askForPath(i18n.get("settings.vault.select")).ifPresent(vaultPathHandler::onVaultPathUpdated);
+    vaultPathHandler.askForPathAndUpdate();
   }
 
   public void onSelectDataLocation() {
-    platformService.askForPath(i18n.get("settings.data.select")).ifPresent(newDataDirectory -> {
+    platformService.askForPath(i18n.get("settings.data.select"))
+                   .thenAccept(possiblePath -> possiblePath.ifPresent(newDataDirectory -> {
       log.info("User changed data directory to: `{}`", newDataDirectory);
       DataPrefs dataPrefs = preferences.getData();
 
@@ -591,7 +589,7 @@ public class SettingsController extends NodeController<Node> {
       moveDirectoryTask.setOldDirectory(dataPrefs.getBaseDataDirectory());
       moveDirectoryTask.setAfterCopyAction(() -> dataPrefs.setBaseDataDirectory(newDataDirectory));
       taskService.submitTask(moveDirectoryTask);
-    });
+                   }));
   }
 
   public void onSelectExecutionDirectory() {
