@@ -192,22 +192,31 @@ public class ChatUserListControllerTest extends PlatformTest {
   @Test
   public void testOnChangeUserCategory() throws Exception {
     ChatChannelUser user = generateUser(SocialStatus.OTHER);
-    ChatChannelUser updatedUser = ChatChannelUserBuilder.create(user.getUsername(), CHANNEL_NAME)
-        .player(PlayerBeanBuilder.create().socialStatus(FRIEND).get())
-        .get();
     addUsersToChannel(user);
 
     runOnFxThreadAndWait(() -> instance.setChatChannel(chatChannel));
 
     assertContainUsersInCategory(ChatUserCategory.OTHER, user);
-    assertNotContainUsersInCategory(ChatUserCategory.FRIEND, updatedUser);
+    assertNotContainUsersInCategory(ChatUserCategory.FRIEND, user);
     assertContainUsersInSource(user);
 
     runOnFxThreadAndWait(() -> user.getPlayer().ifPresent(playerBean -> playerBean.setSocialStatus(FRIEND)));
 
     assertNotContainUsersInCategory(ChatUserCategory.OTHER, user);
-    assertContainUsersInCategory(ChatUserCategory.FRIEND, updatedUser);
-    assertContainUsersInSource(updatedUser);
+    assertContainUsersInCategory(ChatUserCategory.FRIEND, user);
+    assertContainUsersInSource(user);
+
+    runOnFxThreadAndWait(() -> user.setModerator(true));
+
+    assertNotContainUsersInCategory(ChatUserCategory.FRIEND, user);
+    assertContainUsersInCategory(ChatUserCategory.MODERATOR, user);
+    assertContainUsersInSource(user);
+
+    runOnFxThreadAndWait(() -> user.setAway(true));
+
+    assertNotContainUsersInCategory(ChatUserCategory.MODERATOR, user);
+    assertContainUsersInCategory(ChatUserCategory.AWAY, user);
+    assertContainUsersInSource(user);
   }
 
   @Test
@@ -217,7 +226,6 @@ public class ChatUserListControllerTest extends PlatformTest {
 
     runOnFxThreadAndWait(() -> instance.setChatChannel(chatChannel));
 
-    assertContainUsersInCategory(ChatUserCategory.FRIEND, user);
     assertContainUsersInCategory(ChatUserCategory.MODERATOR, user);
   }
 
@@ -228,7 +236,6 @@ public class ChatUserListControllerTest extends PlatformTest {
 
     runOnFxThreadAndWait(() -> instance.setChatChannel(chatChannel));
 
-    assertContainUsersInCategory(ChatUserCategory.FOE, user);
     assertContainUsersInCategory(ChatUserCategory.MODERATOR, user);
   }
 
@@ -239,8 +246,51 @@ public class ChatUserListControllerTest extends PlatformTest {
 
     runOnFxThreadAndWait(() -> instance.setChatChannel(chatChannel));
 
-    assertContainUsersInCategory(ChatUserCategory.CHAT_ONLY, user);
     assertContainUsersInCategory(ChatUserCategory.MODERATOR, user);
+  }
+
+  @Test
+  public void testFriendlyUserIsAway() throws Exception {
+    ChatChannelUser user = generateUser(SocialStatus.FRIEND, false);
+    user.setAway(true);
+    addUsersToChannel(user);
+
+    runOnFxThreadAndWait(() -> instance.setChatChannel(chatChannel));
+
+    assertContainUsersInCategory(ChatUserCategory.AWAY, user);
+  }
+
+  @Test
+  public void testEnemyUserIsAway() throws Exception {
+    ChatChannelUser user = generateUser(SocialStatus.FOE, false);
+    user.setAway(true);
+    addUsersToChannel(user);
+
+    runOnFxThreadAndWait(() -> instance.setChatChannel(chatChannel));
+
+    assertContainUsersInCategory(ChatUserCategory.AWAY, user);
+  }
+
+  @Test
+  public void testChatOnlyUserIsAway() throws Exception {
+    ChatChannelUser user = generateUser(null, false);
+    user.setAway(true);
+    addUsersToChannel(user);
+
+    runOnFxThreadAndWait(() -> instance.setChatChannel(chatChannel));
+
+    assertContainUsersInCategory(ChatUserCategory.AWAY, user);
+  }
+
+  @Test
+  public void testModeratorUserIsAway() throws Exception {
+    ChatChannelUser user = generateUser(null, true);
+    user.setAway(true);
+    addUsersToChannel(user);
+
+    runOnFxThreadAndWait(() -> instance.setChatChannel(chatChannel));
+
+    assertContainUsersInCategory(ChatUserCategory.AWAY, user);
   }
 
   @Test
@@ -258,7 +308,6 @@ public class ChatUserListControllerTest extends PlatformTest {
     assertContainUsersInCategory(ChatUserCategory.SELF, selfUser);
     assertContainUsersInCategory(ChatUserCategory.MODERATOR, moderatorUser);
     assertContainUsersInCategory(ChatUserCategory.FRIEND, friendUser);
-    assertContainUsersInCategory(ChatUserCategory.OTHER, moderatorUser);
     assertContainUsersInCategory(ChatUserCategory.OTHER, otherUser);
     assertContainUsersInCategory(ChatUserCategory.FOE, foeUser);
     assertContainUsersInCategory(ChatUserCategory.CHAT_ONLY, chatOnlyUser);
@@ -379,7 +428,7 @@ public class ChatUserListControllerTest extends PlatformTest {
   }
 
   private void addUsersToChannel(ChatChannelUser... users) {
-    addUsersToChannel(Arrays.asList(users));
+    addUsersToChannel(List.of(users));
   }
 
   private void addUsersToChannel(Collection<ChatChannelUser> users) {
@@ -387,7 +436,7 @@ public class ChatUserListControllerTest extends PlatformTest {
   }
 
   private void removeUsersFromChannel(ChatChannelUser... users) {
-    removeUsersFromChannel(Arrays.stream(users).toList());
+    removeUsersFromChannel(List.of(users));
   }
 
   private void removeUsersFromChannel(Collection<ChatChannelUser> users) {
@@ -447,7 +496,7 @@ public class ChatUserListControllerTest extends PlatformTest {
   }
 
   private ChatChannelUser generateUser(SocialStatus socialStatus, boolean isModerator) {
-    return ChatChannelUserBuilder.create(RandomStringUtils.randomAlphanumeric(15), CHANNEL_NAME)
+    return ChatChannelUserBuilder.create(RandomStringUtils.randomAlphanumeric(15), new ChatChannel(CHANNEL_NAME))
         .moderator(isModerator).player(PlayerBeanBuilder.create().socialStatus(socialStatus).get()).get();
   }
 }
